dataset1235/2025-2/1955397009/users/2540684130/executions/1107611404_3691284457.log
== RUN (2025-08-26 12:03:15)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                            ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:04:40)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10

print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                         ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:07:35)
-- CODE: 
n1 = float(input("nota 1:"))
n2 = float(input("nota 2:"))
n3 = float(input("nota 3:"))
n4 = float(input("nota 4:"))

x = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10

print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota 1:nota 2:nota 3:nota 4:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota 1:nota 2:nota 3:nota 4:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota 1:nota 2:nota 3:nota 4:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota 1:nota 2:nota 3:nota 4:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota 1:nota 2:nota 3:nota 4:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota 1:nota 2:nota 3:nota 4:7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:07:45)
-- CODE: 
n1 = float(input("nota 1:"))
n2 = float(input("nota 2:"))
n3 = float(input("nota 3:"))
n4 = float(input("nota 4:"))

x = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10

print(round(x,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota 1:nota 2:nota 3:nota 4:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota 1:nota 2:nota 3:nota 4:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota 1:nota 2:nota 3:nota 4:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota 1:nota 2:nota 3:nota 4:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota 1:nota 2:nota 3:nota 4:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota 1:nota 2:nota 3:nota 4:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:03:34)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
                                             ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:03:06)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    media = ((n1 * 1)+ (n2 * 2) + (n3 * 3) + (n4 * 4) / 10
            ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:05:46)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10

print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4)) / 10
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:01:49)
-- CODE: 
n1 = input("nota 1:")
n2 = input("nota 2:")
n3 = input("nota 3:")
n4 = input("nota 4:")

media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1 * 1 + n2 * 2 + n3 * 3 + n4 * 4) / 10
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
